Fix the alignment issue in some elements

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -100,19 +100,6 @@
     position: static;
   }
 
-  .u-circle {
-    left: 5rem;
-  }
-
-  .f-circle {
-    left: 5rem;
-  }
-
-  .g-circle {
-    left: 13rem;
-  }
-
-
   .w-backCircle {
     left: 8rem !important;
   }
